# cdl_insl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  language_evaluator.ipynb  language_goals.ipynb  main.ipynb  pyproject.toml
data/: data.csv  doc.html  language_evaluation_results.html
infra/: llm.py
marimo/: count_verbs_compare.py  count_verbs_single.py
src/insl/: correction.py  parser.py  processing.py
tests/: __init__.py  test_correction.py  test_parser.py
tests/data/: text1.txt  text2.txt  text3.txt
